# Proj02_PCP_sockets

./: CMakeLists.txt  Makefile  README.md  client  client.c  cliente  gera  geraImagem.c  server  server.c  servidor
